Wed May 12 15:08:14 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Hello/Hello_Base/Hello_Base.mpc:
        
          Copied export macro settings from stub project to servant
          project. The servant project had only one export macro
          defined for both *C.h and *S.h files, and so was
          clobbering the stub export macro already generated.

Wed May 12 14:25:00 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Added some more general functions.

Wed May 12 13:51:37 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Added some general functions which other handlers could
          use.

Wed May 12 12:59:21 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Added dump functions for the structures.

Wed May 12 12:44:40 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Made changes to handle HREF tags within
          another referenced document.

Wed May 12 00:06:26 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Made changes to handle HREF tags.

Tue May 11 22:58:35 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:

          Changes to support multiplex uses ports in components.
          Thanks to Bala Natarajan <bala@dre.vanderbilt.edu> for
          writing the hand-crafted version of the servant glue
          code.

Tue May 11 22:55:22 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/OEP/BasicSP/BasicSP.mpc:
