@@ -83,13 +83,12 @@ namespace CIAO {
       static DOMDocument * create_document (const char * url);
       // Create a document from the URL
 
-      static DOMNodeIterator * parse_href_tag (XMLURL xml_url, 
+      static DOMNodeIterator * parse_href_tag (XMLURL xml_url,
                                                DOMDocument * doc);
-      // Process the <href = "URL"> and return an iterator to the 
+      // Process the <href = "URL"> and return an iterator to the
       // new document
     };
   }
 
 }
-
 #endif /* UTILS_H */
